configure buildspec.yml for aws code build

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
  
    <head>
       <meta charset="UTF-8">
+      <link rel="shortcut icon" href="/favicon.ico" />
       <title>Here is My Resume - HANS</title>
       <!-- FontAwesome JS -->
       <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"
